[package]
name = "bayes-star"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.23.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.4" 
log = "0.4"
env_logger = "0.10.1"
clap = "3.0"
once_cell = "1.7"
colored = "1.7.0"