[package]
name = "bayes-star"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.23.0" # Redis client for Rust
serde = { version = "1.0", features = ["derive"] } # Serialization framework
serde_json = "1.0" # JSON support for Serde
rand = "0.8.4" # Random number generation
log = "0.4" # Logging facade
env_logger = "0.10.1" # Implements a logger for the `log` facade
clap = "3.0" # Command line argument parser
once_cell = "1.7" # Single initialization and lazy evaluation
colored = "1.7.0" # Coloring terminal output
rocket = "0.5.0" # Web framework
walkdir = "2.3" # Traverse directory trees
r2d2 = "0.8.9" # Generic connection pool
r2d2_redis = "0.14.0" # Redis connection pool management
